--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,145 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-body,
-html {
-    margin: 0;
+body {
     padding: 0;
-    overflow-x: hidden;
+    margin: 0;
+    background: whitesmoke;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-weight: 400;
 }
 
 h1,
 h2,
 h3,
 h4,
-h5,
-p {
-    font-family: roboto;
+h5 {
+    font-family: 'Oswald', sans-serif;
+}
+
+table {
+    width: 100%;
+}
+
+thead {
+    background: whitesmoke;
+    display: table-header-group;
+    vertical-align: middle;
+    border-bottom: 5px solid black !important;
+}
+
+tr {
+    padding: 10px 4px;
+    height: 50px;
+    ;
+}
+
+th {
+    padding: 0;
+}
+
+#headerCard {
+    background-color: #3f51b5;
+    color: white;
+    padding: 10px 30px 10px 30px;
+}
+
+.closeCardBackground {
+    background: rgba(0, 0, 0, .5);
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9
+}
+
+.closeIcon {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    margin: 0px;
+    font-size: 25px;
+    color: #D1D1D1;
+    cursor: pointer;
+}
+
+.cardSpace {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    z-index: 9;
+}
+
+.cardModule {
+    border-radius: 3px;
+    width: 50%;
+    max-width: 1000px;
+    -webkit-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+    background: white;
+    padding: 25px;
+    z-index: 10;
+    position: relative;
+}
+
+@media screen and (max-width: 750px) {
+    .cardModule {
+        width: 90%;
+        max-height: 80%;
+        overflow-y: scroll;
+    }
+}
+
+
+/* Inputs Grid Styles */
+
+.input {
+    display: block;
+}
+
+.l12 {
+    width: 100%;
+}
+
+.l9 {
+    width: 75%;
+}
+
+.l6 {
+    width: 49%;
+}
+
+.l4 {
+    width: 32%;
+}
+
+.l3 {
+    width: 24%;
+}
+
+@media screen and (max-width: 600px) {
+    .l9 {
+        width: 100%;
+    }
+    .l6 {
+        width: 100%;
+    }
+    .l4 {
+        width: 49%;
+    }
+    .l3 {
+        width: 49%;
+    }
 }
