More progress on Login architecture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,2 @@
-<div class="panel">
-    <h3>Wolosky</h3>
-    <hr>
-
-    <p>Usuarios</p>
-    <h5>Alumnos</h5>
-    <h5>Maestros</h5>
-    <h5>Administradores</h5>
-
-    <hr>
-
-    <p>Pagos</p>
-    <h5>Lista</h5>
-
-    <hr>
-
-    <p>Recibos</p>
-    <h5>Lista</h5>
-
-</div>
-
-<div class="principal">
-
-
-    <div class="workSpace">
-        <div class="appSpace">
-            <app-user-component></app-user-component>
-        </div>
-    </div>
-</div>
+<app-login *ngIf="!userSignin" (login)="appView()"></app-login>
+<!-- <app-login *ngIf="userSignin" -->
