View create User and user improvements, create user Works 25%

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -35,8 +35,8 @@
 
 <div class="principal" [@space]="statePanel">
     <div class="principalCard">
-        <app-user-component *ngIf="views.user"></app-user-component>
-
+        <!--app-user-component *ngIf="views.user"></app-user-component-->
+        <app-user *ngIf="views.user"></app-user>
 
     </div>
 
