Loader and check login in storage Works

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,3 +32,26 @@
     font-weight: 200;
     padding-left: 10px;
 }
+
+.loader {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 20;
+}
+
+.loader img {
+    display: block;
+    width: 500px;
+}
+
+@media screen and (max-width: 600px) {
+    .loader img {
+        width: 75%
+    }
+}
