--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <app-login *ngIf="!userSignin" (login)="appView()"></app-login>
+<app-structure *ngIf="userSignin"></app-structure>
+
+<div class="loader" [@loader]="stateLoader">
+    <img [@loaderImg]="stateLoaderImg" src="http://www.woloskygimnasia.com/images/Wolosky-Logo.png">
+    <!-- <button #btnAnimation (click)="loaderAnimation()" style="position: absolute; top: 0">CHANGE</button>
+    <button #btnAnimation (click)="test()" style="position: absolute; top: 20px">2323</button> -->
+</div>
