--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,8 +1,117 @@
-.loginCardModule{
+.loginCardModule {
+    border-radius: 3px;
+    width: 450px;
+    -webkit-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
     background: white;
-    z-index: 12;
+    padding: 10px 20px 100px 20px;
+    z-index: 10;
+    position: relative;
 }
 
-.closeCardBackground {
-    z-index: 5;
+.cardSpace {
+    background-image: url(http://thepatternlibrary.com/img/b.jpg);
+}
+
+#logo {
+    width: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+#bienvenida {
+    text-align: center;
+    margin: 0;
+    font-size: 30px;
+    color: rgb(73, 73, 73);
+}
+
+#formSpace {
+    padding: 0 15px
+}
+
+input {
+    width: 100%;
+    border: none;
+    background: #ECECEC;
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 15px;
+}
+
+#btnLog {
+    position: absolute;
+    /* z-index: 12; */
+    opacity: 0;
+}
+
+#btnLogin:hover {
+    background: #FC2323;
+}
+
+#btnLog:focus+div {
+    background: #FC2323;
+}
+
+#btnLogin {
+    background: #C00000;
+}
+
+#btnFacebook {
+    border: none;
+    background: #0263FF;
+    /* font-weight: bold; */
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 16px;
+}
+
+.btn {
+    width: 100%;
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 15px;
+    color: white;
+    z-index: 13;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+}
+
+.registrateSection span {
+    font-size: 12px;
+    display: inline-block;
+    margin-right: 4px;
+}
+
+.registrateSection button {
+    float: right;
+    opacity: 1;
+    border: none;
+    background-color: transparent;
+    font-weight: bold;
+    text-decoration: none;
+    vertical-align: baseline;
+}
+
+@media screen and (max-width:600px) {
+    .cardSpace {
+        background-image: none;
+        padding: none;
+        display: block;
+        background: white;
+    }
+    .loginCardModule {
+        border-radius: 0px;
+        width: 100%;
+        -webkit-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
+        box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+        background: white;
+        padding: 20px;
+        z-index: 10;
+        position: relative;
+        max-width: none;
+    }
 }
