Create user Advance 25%
The view maybe need some improvements and shcedules dont pass de new variables de to his parent component( Create user componente)  the Reference componente will be the same animation that schedule open or his parent, Services need to pass the token every time, Login is working with  the server check "Wolsky 2.0" Repository and run it or only write token on Local Storage, whatever to run angular aplicacion and work with the views.

--- a/src/app/user/create-schedule/create-schedule.component.html
+++ b/src/app/user/create-schedule/create-schedule.component.html
@@ -1,3 +1,11 @@
-<p>
-  create-schedule works!
-</p>
+<div class="background" [@background]="backgroundState"></div>
+<div id="createCard" [@principal]="cardState">
+
+    <div id="cerrarBtn" (click)="close()"> Cerrar <i class="material-icons">close</i></div>
+
+    <div class="form">
+        <h1 align="center">Asignar Horarios</h1>
+
+
+    </div>
+</div>
