--- a/src/app/user/create-user/create-user.component.css
+++ b/src/app/user/create-user/create-user.component.css
@@ -1,21 +1,67 @@
-input, select {
+input,
+select {
     border: none;
     background: #ECECEC;
     padding: 10px;
     border-radius: 3px;
     margin-bottom: 15px;
-    width: 20%;
+    width: 45%;
 }
 
-
-#createCard{
+#createCard {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh; 
-    background: white;   
+    height: 100vh;
+    background: white;
     z-index: 10;
+    overflow-y: scroll;
+}
+
+h2 {
+    margin-top: 0;
+}
+
+.btn {
+    width: 100%;
+    padding: 10px;
+    color: white;
+    transition: .45s;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:focus {
+    background: red;
+}
+
+.btn:hover {
+    background: red;
+}
+
+.referenceBtn {
+    background: rgb(201, 0, 0);
+}
+
+.horarioBtn {
+    background: rgb(201, 0, 0);
+}
+
+.formBtn {
+    padding: 20px;
+    background: rgb(0, 103, 199);
+    border: none;
+}
+
+.formBtn:hover {
+    background: rgb(0, 132, 255);
+    transform: scale(1.05);
+}
+
+.formBtn:focus {
+    background: rgb(0, 132, 255);
+    transform: scale(1.05);
 }
 
 #cerrarBtn {
@@ -26,10 +72,36 @@ input, select {
     top: 0;
     left: 0;
     cursor: pointer;
+    transition: .25s;
+}
+
+#cerrarBtn:hover {
+    background: red;
 }
 
 .form {
     display: block;
     margin: 0 auto;
     width: 90%;
+    max-width: 1200px;
+}
+
+.form1 {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.form1 div {
+    width: 50%;
+    padding: 20px 0;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background: black;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9;
 }
