--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,33 @@ th {
     cursor: pointer;
 }
 
+.btn {
+    width: 100%;
+    padding: 10px;
+    color: white;
+    transition: .45s;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:focus {
+    background: red;
+}
+
+.btn:hover {
+    background: red;
+}
+
+input,
+select {
+    border: none;
+    background: #ECECEC;
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 15px;
+    width: 45%;
+}
+
 .cardSpace {
     height: 100vh;
     width: 100vw;
